--- a/01-odev-trendyol/css/style.css
+++ b/01-odev-trendyol/css/style.css
@@ -106,11 +106,13 @@ header {
     width: 630px;
     border: 1px solid black;
     justify-content: center;
+    align-items: center;
 }
 
 .search-bar>input {
     width: 600px;
     border: none;
+    flex: 1;
 
 }
 
@@ -176,6 +178,7 @@ header {
     /* height: 140px; */
     /* ==================== */
     width: 320px;
+    /* ============== */
     margin: 0 20px;
 }
 
