--- a/01-odev-trendyol/css/style.css
+++ b/01-odev-trendyol/css/style.css
@@ -196,26 +196,52 @@ header {
     flex-direction: column;
     text-align: center;
 }
-.banner-listing-items{
+
+.banner-listing-items {
     display: flex;
     justify-content: center;
     column-gap: 20px;
     margin-top: 20px;
 }
-.banner-listing-items img{
+
+.banner-listing-items img {
     width: 387px;
     height: auto;
 }
-.banner-listing-items a {
+
+.banner-listing-items a {}
+
+.kampanyalar {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    gap: 25px;
+}
+
+.kampanya {
+    width: 383px;
 
 }
-.kampanyalar{
-    margin-top: 40px;
-}
-.kampanya{
-    width: 383px;
-}
-.kampanya img{
+
+.kampanya img {
     width: 100%;
-        height: 188px;
+    height: 188px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    display: block;
+}
+
+.kampanya p {
+    background-color: var(--bg-dark-link);
+    color: white;
+    padding: 10px 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: 300ms;
+}
+
+.kampanya-link:hover>p {
+
+    background-color: var(--text-warning);
+
 }
