derse girerken ppush

--- a/01-odev-trendyol/css/style.css
+++ b/01-odev-trendyol/css/style.css
@@ -197,6 +197,14 @@ header {
     text-align: center;
 }
 
+.circlelink p {
+    display: flex;
+    width: 68px;
+    text-align: center;
+    t align-items: center;
+    justify-content: center;
+}
+
 .banner-listing-items {
     display: flex;
     justify-content: center;
